--- a/Report/unswthesis-2.0/conclusion.tex
+++ b/Report/unswthesis-2.0/conclusion.tex
@@ -1,22 +1,15 @@
 \chapter{Conclusion}\label{ch:conclusion}
 
-A thesis requirements/template document has been created.  This serves the
-dual purposes of giving students specific requirements to their theses ---
-both style and content related --- while providing a typical thesis
-structure in a \LaTeX\ template.
-
 \begin{itemize}
-  \item Do we need a conclusion for thesis A ??
-  \item Summarize what we have so far??
-\ldots
+\item Summarize what we have so far??
 \end{itemize}
 
-\section{Future Work}
+Users are not capable of understanding what type of user that they are. This means that the results that we have achieved may not be reliable enough to measure the performance of our algorithm. 
 
-Extract the requirements from the template in order to have very concise
-requirements.
+\section{Future Work}
+ 
+Our algorithm only contains a few user types, these user types could be expanded into more specific categories. There could also be more work dedicated to making the user understand each user type so they they will be able to correctly select their user type that best defines themselves.
 
 \begin{itemize}
-  \item Possible stuff to extend our thesis
-\ldots
+\item Possible stuff to extend our thesis
 \end{itemize}
