--- a/Report/unswthesis-2.0/introduction.tex
+++ b/Report/unswthesis-2.0/introduction.tex
@@ -1,14 +1,14 @@
 \chapter{Introduction}\label{ch:intro}
 
-Social Networking Services (SNS) are platforms where a diverse range of users are able share their interests, organise social activities and keep in touch with people. In almost all SNS, users are presented with a feed; this feed is a list of items generated via the user's connections that the user may be more or less interested in. The feed acts as a summary of activities that the user has subscribed to, a dashboard presented to them when they first log in. This feed contains a large amount of items that we would like to order, or rank in some way such that the items that the user finds more interesting have a higher precedence in the feed. As the use of SNS grows rapidly, so does the demand for such ranking algorithms. 
+Social Networking Services (SNS) are platforms in which a diverse range of users are able share their interests, organise social activities and keep in touch with people. In almost all SNS, users are presented with a \textit{feed}; this feed is a list of items generated via the user's connections throughout the SNS. The feed acts as a summary of activities that the user has subscribed to, a dashboard presented to them when they first log in. This feed contains a large amount of items that we would like to order, or rank in some way such that the items that the user finds more interesting have a higher precedence in the feed. As the use of SNS grows rapidly, so does the demand for such ranking algorithms.
 
-While there exists many SNS currently being used, the scope of this thesis will be reduced to focus on only one of them; Facebook. This is mainly due to the time constraints involved, however the results and methodology used in both our research and implementation will be generalisable to all SNS. There are two main reasons why Facebook has been chosen as our SNS of focus. 
-Firstly, Facebook is currently the most used SNS which allows us to more easily gather users for our purposes aswell as have more confidence that our results can be generalised to most SNS. 
-Secondly, Facebook attracts  many different types of users due to it's very flexible, generic nature (i.e. not a niche SNS). Each type of user will have different wants and needs and by having a large set of user types, we are able to more easily identify them. 
+While there exists many SNS currently being used, the scope of this thesis will be reduced to focus on only one of them; Facebook. This is mainly due to the time constraints involved, however the results and methodology used in both our research and implementation will be generalisable to all SNS. There are two main reasons why Facebook has been chosen as our SNS of focus.
 
-With all this considered, it is clearly not possible to have one single ranking algorithm  to accomodate for all users, and yet as of now, Facebook only offers one ranking, or view of a user's feed (besides chronological order). Our aim can be summarised as follows: Firstly we will set out to identify these different user types and their needs, then we aim to create a number of different ranking algorithms based on the discovered user types. Thus offering a more personalised ranking of a user's feed. It is important to note that we do not aim to create a \textit{better} ranking algorithm than Facebook as an enormous amount of research and time has already been put into creating said algorithm, instead we aim to offer different, more personalised rankings. 
+Firstly, Facebook is currently the most used SNS; Statistica~\cite{statistica2015facebook} gives us the number of Facebook users for the second quarter of 2015 as almost 1.5 billion. This allows us to more easily gather users for our research purposes as well as have more confidence that our results can be generalised to most SNS.
 
+Secondly, Facebook attracts many different types of users due to it's very flexible, generic nature (i.e. not a niche SNS). Each type of user will have different requirements and by having a large set of user types, we are able to more easily identify and distinguish them from one another.
 
+With all this considered, it is clearly not possible to have one single ranking algorithm to accommodate for all users, and yet as of now, Facebook only offers one ranking, or view of a user's feed (besides chronological order). Our aim can be summarised as follows: First we will set out to identify these different user types and their needs, then we aim to create a number of different ranking algorithms based on the discovered user types. Thus offering a more personalised ranking of a user's feed. It is important to note that we do not aim to create a \textit{better} ranking algorithm than Facebook as an enormous amount of research and time has already been put into creating said algorithm, instead we aim to offer different, more personalised rankings.
 
 %Chapter~\ref{ch:background} explains the background for this document.
 %Chapter~\ref{ch:style} states the style and submission related requirements
