--- a/Report/unswthesis-2.0/pubs.bib
+++ b/Report/unswthesis-2.0/pubs.bib
@@ -132,3 +132,11 @@
   year={2008},
   publisher={Springer}
 }
+
+@misc{statistica2015facebook,
+author={Statista,},
+title={Global Social Networks by Users 2015 | Statistic},
+url={http://www.statista.com/statistics/264810/number-of-monthly-active-facebook-users-worldwide/},
+urldate={2015-10-20},
+year={2015}
+}
