--- a/Report/unswthesis-2.0/acknowledgements.tex
+++ b/Report/unswthesis-2.0/acknowledgements.tex
@@ -1,22 +1,3 @@
 \chapter*{Acknowledgements}\label{ack}
 
-This work has been inspired by the labours of numerous academics in
-the Faculty of Engineering at UNSW who have endeavoured, over the years, to
-encourage students to present beautiful concepts using beautiful
-typography.
-
-Further inspiration has come from Donald Knuth who designed \TeX, for
-typesetting technical (and non-technical) material with elegance and
-clarity; and from Leslie Lamport who contributed \LaTeX, which makes
-\TeX\ usable by mortal engineers.
-
-John Zaitseff, an honours student in CSE at the time, created the
-first version of the UNSW Thesis \LaTeX\ class and the author of the
-current version is indebted to his work.
-
-\begin{itemize}
-  \item Thank you to supervisor
-  \item Thank you to assessor
-  \item Thank you to everyone else
-\ldots
-\end{itemize}
+We would like to thank our supervisor Dr. Helen Paik for her constant guidance and support, and our assessor Prof. Fethi Rabhi for his advice and feedback. 
